--- a/simplegram/templates/base_member.html
+++ b/simplegram/templates/base_member.html
@@ -21,7 +21,7 @@
     <div class="col-md-3">
         <div class="d-flex justify-content-center">
             {% if current_user.profpic %}
-                <img src="{{url_for('static', filename=current_user.profpic)}}" 
+                <img src="{{url_for('static', filename='profiles/'+current_user.username+'/'+current_user.profpic)}}" 
                 alt="Foto Profil User" style="width: 150px;" class="rounded-circle img-fluid">    
             {% else %}
                 <img src="{{url_for('static', filename='anonymous.jpg')}}" 
